--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -246,9 +246,3 @@
     margin-top: 10px;
   }
 }
-
-@media screen and (max-width: 768px) {
-  .n-mobile-nav-container {
-    border: solid 2px blue;
-  }
-}
